--- a/copy move text p1js/index.html
+++ b/copy move text p1js/index.html
@@ -13,6 +13,6 @@
         <br>
         <textarea rows="3" cols="50" class="finalTxt"></textarea>
         <div class="output"></div>
-        <script src="js project 1 copy script.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
